# BlueStar-Vercel

./: .env  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
Backend/: .env.example  pyproject.toml  user_manual_complete.md
Frontend/: USER_MANUAL.md  package.json  (+1 more)
api/: main.py  pyproject.toml  requirements.txt
api/app/core/: config.py  database.py  id_generator.py  role_mapping.py  telegram_utils.py
api/app/features/auth/: auth_dependencies.py  auth_routes.py  auth_service.py
api/app/features/chat/: chat_routes.py  chat_service.py
api/app/features/dashboard/: dashboard_repository.py  dashboard_routes.py  dashboard_service.py
api/app/features/documents/: document_entity.py  document_repository.py  document_routes.py  document_schema.py  document_service.py
api/app/features/fleet/: fleet_entity.py  fleet_repository.py
api/app/features/inventory/: inventory_entity.py  inventory_repository.py  inventory_schema.py  inventory_service.py
api/app/features/middleware/: auth_middleware.py
api/app/features/notifications/: notification_entity.py  telegram_routes.py
api/app/features/transactions/: transaction_entity.py  transaction_schema.py  transaction_service.py
api/app/features/trips/: trip_entity.py  trip_repository.py  trip_routes.py  trip_schema.py  trip_service.py
api/app/features/users/: user_entity.py  user_repository.py
api/app/features/vouchers/: voucher_email_service.py  voucher_entity.py  voucher_repository.py  voucher_routes.py  voucher_schema.py  voucher_service.py
(+162 files in other folders)
