[project]
name = "bluestart-backend2"
version = "0.1.0"
description = "FastAPI backend optimized for Vercel and Neon Postgres"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "pydantic[email]==2.9.2",
    "pydantic-settings>=2.5.2",
    "sqlalchemy>=2.0.45",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "python-multipart>=0.0.9",
    "google-genai==0.6.0",
    "uvicorn[standard]>=0.40.0",
]
